--- a/bootnavbar.css
+++ b/bootnavbar.css
@@ -1,6 +1,6 @@
 
 /* hover dropdown menus */
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 600px) {
     .navbar-hover .show > .dropdown-toggle::after{
         transform: rotate(-90deg);
     }
@@ -17,4 +17,11 @@
 }
 .dropdown-submenu {
     position: relative;
-}
+
+.dropdown-submenu{position:relative;}
+.dropdown-submenu > .dropdown-menu{top:0;left:100%;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
+.dropdown-submenu:active > .dropdown-menu{display:block;}
+.dropdown-submenu > a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
+.dropdown-submenu:active > a:after{border-left-color:#ffffff;}
+.dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left > .dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
+}    
