--- a/css/style1.css
+++ b/css/style1.css
@@ -25,6 +25,10 @@ nav {
   
 }
 
+.carousel-inner {
+  overflow: visible;
+  text-align: center
+}
 .logo {
     font-family:Arial, Helvetica, sans-serif;
     font-weight: bolder;
