--- a/css/style1.css
+++ b/css/style1.css
@@ -29,6 +29,9 @@ nav {
   overflow: visible;
   text-align: center
 }
+.breadcrumb{
+    background-color: black !important; 
+}
 .logo {
     font-family:Arial, Helvetica, sans-serif;
     font-weight: bolder;
