--- a/css/style1.css
+++ b/css/style1.css
@@ -17,7 +17,7 @@ nav {
     background-color:black;
     display: flex;
    /* justify-content: space-between;*/
-    align-items: center;  
+    align-items: left;  
     justify-content:space-between ; 
     list-style: none;
     text-decoration: none !important;
@@ -37,7 +37,7 @@ nav {
     font-weight: bolder;
     text-transform: uppercase;
     text-decoration: none !important;
-    margin-left: 20px;
+    margin-right: 20px;
     font-size: 28px;
     color: #fff;
     display: flex;
